# next-firebase-auth

./: .firebaserc  .gitignore  .openapi-generator-ignore  AGENTS.md  CLAUDE.md  DOCKER.md  GEMINI.md  README.md  docker-compose.yml  openapi-generator.config.json  orval.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  questions.md  redocly.yml  tsconfig.base.json  vitest.config.ts
.github/: DEPLOYMENT_SETUP.md
.github/workflows/: deploy-backend.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/.next/: trace
backend/.next/cache/: .previewinfo  .rscinfo
backend/.next/cache/webpack/server-production/: 0.pack  index.pack
backend/.next/server/: server-reference-manifest.json
backend/.next/server/pages/: _error.js
backend/deploy/: README.md
backend/deploy/environments/: dev.yml  prod.yml  staging.yml
backend/deploy/sam/: samconfig.toml  template.yml
backend/deploy/scripts/: deploy.sh
backend/scripts/: localstack-init.sh  seed_data.py
backend/src/app/: main.py
backend/src/app/api/: __init__.py  auth_implementation.py  comments_implementation.py  dependencies.py  health.py  models.py  posts.py  posts_implementation.py  router.py
backend/src/app/api/routes/: __init__.py  auth.py  comments.py  posts.py  users.py  websocket.py
backend/src/app/application/: exceptions.py
backend/src/app/application/services/: apigateway_websocket_service.py  comments_service.py  favorites_service.py  post_service.py  posts_service.py  user_service.py
backend/src/app/application/use_cases/: comments.py  create_post.py  get_post.py  get_posts.py  update_post.py
backend/src/app/domain/: entities.py  exceptions.py  ports.py  services.py
backend/src/app/domain/entities/: __init__.py  blog_post.py  comment.py  user.py
backend/src/app/domain/repositories/: user_repository.py
backend/src/app/domain/services/: __init__.py  comment_service.py  post_service.py  user_service.py
backend/src/app/infra/repositories/: comments_repository.py  favorites_repository.py  memory_post_repository.py  posts_repository.py  user_repository.py
backend/src/app/shared/: auth.py  config.py  constants.py  dependencies.py  error_handlers.py  firebase.py  response_utils.py
backend/tests/: README.md  conftest.py  requirements-test.txt
backend/tests/factories/: post_factory.py
backend/tests/integration/api/: test_comments_endpoints.py  test_comments_websocket_endpoints.py  test_posts_endpoints.py  test_users_endpoints.py
backend/tests/integration/infra/: __init__.py  test_posts_repository.py
backend/tests/unit/application/: __init__.py  test_apigateway_websocket_service.py  test_comments_service.py  test_posts_service.py
backend/tests/unit/domain/: test_blog_post.py  test_comment.py  test_post_service.py
docs/development-workflow/: openapi-workflow.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  biome.json  docker-compose.yml  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/public/: mockServiceWorker.js
infrastructure/: README.md  deployment-guideline.md
openapi/: README.md  openapi-schema-guideline.md
tests/: README.md  tsconfig.json  vitest.config.ts  vitest.setup.ts
(+316 files in other folders)
