[project]
name = "next-firebase-auth"
version = "0.1.0"
description = "Next.js + Firebase Auth + FastAPI backend with Clean Architecture"
authors = [{name = "Team"}]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.0",
    "firebase-admin>=6.4.0",
    "python-multipart>=0.0.6",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.8",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",
    "localstack>=3.0.0",
    "freezegun>=1.2.2",
    "moto>=4.2.0",
    "testcontainers>=3.7.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/app"]

[tool.ruff]
target-version = "py313"
line-length = 100
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --tb=short"
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["backend/src/app"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/generated/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=37.5.3",
    "freezegun>=1.5.5",
    "moto>=5.1.10",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.9",
    "testcontainers>=4.12.0",
]
